--- a/index.html
+++ b/index.html
@@ -84,7 +84,242 @@
       <!-- /.container -->
     </section>
     <!-- /.about-book -->
+    <section class="proposed">
+      <div class="container">
+        <div class="proposed-wrapper">
+          <div class="recomendation">
+            <div class="recomendation__title">Рекомендации</div>
+            <div class="recomendation-block">
+              <div class="recomendation-block__image">
+                <img
+                  class="recomendation-block__image"
+                  src="img/book/book-1.jpg"
+                  alt="Photo:Book"
+                />
+              </div>
+              <!-- recomendation-block__image -->
+              <div class="recomendation-block__info">
+                <h3 class="recomendation-block__title">
+                  The World of Abstract Art
+                </h3>
+                <p class="recomendation-block__title">Art & Design</p>
+                <span class="recomendation-block__price">$25.00</span>
+                <div class="recomendation-button">
+                  <button class="recomendation-button__btn">Купить</button>
+                  <button class="recomendation-button__like">
+                    <img src="img/heart.svg" alt="Icon: heart" />
+                  </button>
+                </div>
+                <!-- /.recomendation-button -->
+              </div>
+              <!-- /.recomendation-block__info -->
+            </div>
+            <!-- /.recomendation__block -->
+            <div class="recomendation-block">
+              <div class="recomendation-block__image">
+                <img
+                  class="recomendation-block__image"
+                  src="img/book/book-1.jpg"
+                  alt="Photo:Book"
+                />
+              </div>
+              <!-- recomendation-block__image -->
+              <div class="recomendation-block__info">
+                <h3 class="recomendation-block__title">
+                  The World of Abstract Art
+                </h3>
+                <p class="recomendation-block__title">Art & Design</p>
+                <span class="recomendation-block__price">$25.00</span>
+                <div class="recomendation-button">
+                  <button class="recomendation-button__btn">Купить</button>
+                  <button class="recomendation-button__like">
+                    <img src="img/heart.svg" alt="Icon: heart" />
+                  </button>
+                </div>
+                <!-- /.recomendation-button -->
+              </div>
+              <!-- /.recomendation-block__info -->
+            </div>
+            <!-- /.recomendation__block -->
+            <div class="recomendation-block">
+              <div class="recomendation-block__image">
+                <img
+                  class="recomendation-block__image"
+                  src="img/book/book-1.jpg"
+                  alt="Photo:Book"
+                />
+              </div>
+              <!-- recomendation-block__image -->
+              <div class="recomendation-block__info">
+                <h3 class="recomendation-block__title">
+                  The World of Abstract Art
+                </h3>
+                <p class="recomendation-block__title">Art & Design</p>
+                <span class="recomendation-block__price">$25.00</span>
+                <div class="recomendation-button">
+                  <button class="recomendation-button__btn">Купить</button>
+                  <button class="recomendation-button__like">
+                    <img src="img/heart.svg" alt="Icon: heart" />
+                  </button>
+                </div>
+                <!-- /.recomendation-button -->
+              </div>
+              <!-- /.recomendation-block__info -->
+            </div>
+            <!-- /.recomendation__block -->
+            <div class="recomendation-other">
+              <div class="recomendation-other__image">
+                <img
+                  class="recomendation-other__image"
+                  src="img/book/book-1.jpg"
+                  alt="Photo:Book"
+                />
+              </div>
+              <!-- recomendation-other__image -->
+              <div class="recomendation-other__info">
+                <h3 class="recomendation-other__title">
+                  The World of Abstract Art
+                </h3>
+                <p class="recomendation-other__title">Art & Design</p>
+                <span class="recomendation-other__price">$25.00</span>
+                <div class="recomendation-button">
+                  <button class="recomendation-button__btn">Купить</button>
+                  <button class="recomendation-button__like">
+                    <img src="img/heart.svg" alt="Icon: heart" />
+                  </button>
+                </div>
+                <!-- /.recomendation-button -->
+              </div>
+              <!-- /.recomendation-other__info -->
+            </div>
+            <!-- /.recomendation__other -->
+            <div class="recomendation-other">
+              <div class="recomendation-other__image">
+                <img
+                  class="recomendation-other__image"
+                  src="img/book/book-1.jpg"
+                  alt="Photo:Book"
+                />
+              </div>
+              <!-- recomendation-other__image -->
+              <div class="recomendation-other__info">
+                <h3 class="recomendation-other__title">
+                  The World of Abstract Art
+                </h3>
+                <p class="recomendation-other__title">Art & Design</p>
+                <span class="recomendation-other__price">$25.00</span>
+                <div class="recomendation-button">
+                  <button class="recomendation-button__btn">Купить</button>
+                  <button class="recomendation-button__like">
+                    <img src="img/heart.svg" alt="Icon: heart" />
+                  </button>
+                </div>
+                <!-- /.recomendation-button -->
+              </div>
+              <!-- /.recomendation-other__info -->
+            </div>
+            <!-- /.recomendation__other -->
+            <div class="recomendation-other">
+              <div class="recomendation-other__image">
+                <img
+                  class="recomendation-other__image"
+                  src="img/book/book-1.jpg"
+                  alt="Photo:Book"
+                />
+              </div>
+              <!-- recomendation-other__image -->
+              <div class="recomendation-other__info">
+                <h3 class="recomendation-other__title">
+                  The World of Abstract Art
+                </h3>
+                <p class="recomendation-other__title">Art & Design</p>
+                <span class="recomendation-other__price">$25.00</span>
+                <div class="recomendation-button">
+                  <button class="recomendation-button__btn">Купить</button>
+                  <button class="recomendation-button__like">
+                    <img src="img/heart.svg" alt="Icon: heart" />
+                  </button>
+                </div>
+                <!-- /.recomendation-button -->
+              </div>
+              <!-- /.recomendation-other__info -->
+            </div>
+            <!-- /.recomendation__other -->
+            <button class="recomendation-big">Больше рекомендаций</button>
+            <!-- /.recomandation-big -->
+          </div>
+          <!-- /.recomendation -->
 
+          <div class="top">
+            <h1 class="top-title">Топ Месяца</h1>
+            <div class="top-cover">
+              <div class="top-block">
+                <div class="top-block__image">
+                  <img src="img/book/top-1.jpg" alt="Photo: Book" />
+                  <div class="top-block__title">
+                    Sprint : Solve, Test in 5 Days
+                  </div>
+                  <span class="top-block__price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+              <!-- /.top-block -->
+              <div class="top-block">
+                <div class="top-block__image">
+                  <img src="img/book/top-1.jpg" alt="Photo: Book" />
+                  <div class="top-block__title">
+                    Sprint : Solve, Test in 5 Days
+                  </div>
+                  <span class="top-block__price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+              <!-- /.top-block -->
+              <div class="top-block">
+                <div class="top-block__image">
+                  <img src="img/book/top-1.jpg" alt="Photo: Book" />
+                  <div class="top-block__title">
+                    Sprint : Solve, Test in 5 Days
+                  </div>
+                  <span class="top-block__price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+              <!-- /.top-block -->
+              <div class="top-block">
+                <div class="top-block__image">
+                  <img src="img/book/top-1.jpg" alt="Photo: Book" />
+                  <div class="top-block__title">
+                    Sprint : Solve, Test in 5 Days
+                  </div>
+                  <span class="top-block__price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+              <!-- /.top-block -->
+              <div class="top-block">
+                <div class="top-block__image">
+                  <img src="img/book/top-1.jpg" alt="Photo: Book" />
+                  <div class="top-block__title">
+                    Sprint : Solve, Test in 5 Days
+                  </div>
+                  <span class="top-block__price">$23.00</span>
+                  <button class="top-button">Купить</button>
+                </div>
+              </div>
+              <!-- /.top-block -->
+              <div class="top-line"></div>
+              <p class="top-book">Лучшие книги</p>
+            </div>
+            <!-- /.top-wrapper -->
+          </div>
+          <!-- /.top -->
+        </div>
+        <!-- /.proposed-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.proposed -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
