create: added slider

--- a/index.html
+++ b/index.html
@@ -323,7 +323,78 @@ Build Products"
       <!-- /.container -->
     </section>
     <!-- /.recommendation -->
+
+    <div class="categories">
+      <div class="container">
+        <div class="swiper-container categories__container">
+          <div class="swiper-wrapper categories__wrapper">
+            <a href="#" class="swiper-slide categories__slide">
+              <div class="categories__icon">
+                <img
+                  src="img/slider/logo-1.svg"
+                  alt="Logo"
+                  class="categories__img"
+                />
+              </div>
+              <!-- /.categories__icon -->
+              <h3 class="categories__title">Бизнес & Финансы</h3>
+              <span class="categories__text">Книги про мир бизнеса</span>
+            </a>
+            <a href="#" class="swiper-slide categories__slide">
+              <div class="categories__icon">
+                <img
+                  src="img/slider/logo-1.svg"
+                  alt="Logo"
+                  class="categories__img"
+                />
+              </div>
+              <!-- /.categories__icon -->
+              <h3 class="categories__title">Бизнес & Финансы</h3>
+              <span class="categories__text">Книги про мир бизнеса</span>
+            </a>
+            <a href="#" class="swiper-slide categories__slide">
+              <div class="categories__icon">
+                <img
+                  src="img/slider/logo-1.svg"
+                  alt="Logo"
+                  class="categories__img"
+                />
+              </div>
+              <!-- /.categories__icon -->
+              <h3 class="categories__title">Бизнес & Финансы</h3>
+              <span class="categories__text">Книги про мир бизнеса</span>
+            </a>
+            <a href="#" class="swiper-slide categories__slide">
+              <div class="categories__icon">
+                <img
+                  src="img/slider/logo-1.svg"
+                  alt="Logo"
+                  class="categories__img"
+                />
+              </div>
+              <!-- /.categories__icon -->
+              <h3 class="categories__title">Бизнес & Финансы</h3>
+              <span class="categories__text">Книги про мир бизнеса</span>
+            </a>
+          </div>
+          <!-- /.swiper-wrapper categories__wrapper -->
+          <div class="categories__button categories__button_prev">
+            <i class="fas fa-arrow-left"></i>
+          </div>
+          <div class="categories__button categories__button_next">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </div>
+        <!-- /.swiper-container categories__container -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.categories -->
     <script src="https://use.fontawesome.com/e3087e072a.js"></script>
+    <script
+      src="https://kit.fontawesome.com/08a673d80a.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
