create: added slider

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Test in 5 Days"
                     Sprint : Solve, Test in 5 Days
                   </h3>
                   <span class="month-top__price">$23.00</span>
-                  <button class="button month-top__button">Купить</button>
+                  <button class="month-top__button">Купить</button>
                 </div>
                 <!-- /.month-top__info -->
               </div>
@@ -266,7 +266,7 @@ Break Problem"
                     Hacking Growth Break Problem
                   </h3>
                   <span class="month-top__price">$23.00</span>
-                  <button class="button month-top__button">Купить</button>
+                  <button class="month-top__button">Купить</button>
                 </div>
                 <!-- /.month-top__info -->
               </div>
@@ -285,7 +285,7 @@ Novel by Mercy"
                     Very Nice a Novel by Mercy
                   </h3>
                   <span class="month-top__price">$23.00</span>
-                  <button class="button month-top__button">Купить</button>
+                  <button class="month-top__button">Купить</button>
                 </div>
                 <!-- /.month-top__info -->
               </div>
@@ -304,12 +304,12 @@ Build Products"
                     Hooked : How to Build Products
                   </h3>
                   <span class="month-top__price">$23.00</span>
-                  <button class="button month-top__button">Купить</button>
+                  <button class="month-top__button">Купить</button>
                 </div>
                 <!-- /.month-top__info -->
               </div>
               <!-- /.month-top__card -->
-              <div class="month-top__line"></div>
+              <div class="month-line"></div>
               <button class="month-top__more">Лучшие книги</button>
             </div>
             <!-- /.month-wrapper -->
@@ -318,7 +318,7 @@ Build Products"
         </div>
         <!-- /.wrapper -->
 
-        <div class="month-top__line"></div>
+        <div class="month-line"></div>
       </div>
       <!-- /.container -->
     </section>
@@ -328,54 +328,52 @@ Build Products"
       <div class="container">
         <div class="swiper-container categories__container">
           <div class="swiper-wrapper categories__wrapper">
-            <a href="#" class="swiper-slide categories__slide">
-              <div class="categories__icon">
+            <div class="swiper-slide categories__slide">
+              <div class="categories-card">
                 <img
                   src="img/slider/logo-1.svg"
                   alt="Logo"
-                  class="categories__img"
+                  class="categories-image"
                 />
+                <h2 class="categories-title">Бизнес & Финансы</h2>
+                <span class="categories-subtitle">Книги про мир бизнеса</span>
               </div>
-              <!-- /.categories__icon -->
-              <h3 class="categories__title">Бизнес & Финансы</h3>
-              <span class="categories__text">Книги про мир бизнеса</span>
-            </a>
-            <a href="#" class="swiper-slide categories__slide">
-              <div class="categories__icon">
+              <!-- /.categories-card -->
+              <div class="categories-card">
                 <img
-                  src="img/slider/logo-1.svg"
+                  src="img/slider/logo-2.svg"
                   alt="Logo"
-                  class="categories__img"
+                  class="categories-image"
                 />
+                <h2 class="categories-title">Самомотиватия</h2>
+                <span class="categories-subtitle">Книги о мотивации</span>
               </div>
-              <!-- /.categories__icon -->
-              <h3 class="categories__title">Бизнес & Финансы</h3>
-              <span class="categories__text">Книги про мир бизнеса</span>
-            </a>
-            <a href="#" class="swiper-slide categories__slide">
-              <div class="categories__icon">
+              <!-- /.categories-card -->
+              <div class="categories-card">
                 <img
-                  src="img/slider/logo-1.svg"
+                  src="img/slider/logo-3.svg"
                   alt="Logo"
-                  class="categories__img"
+                  class="categories-image"
                 />
+                <h2 class="categories-title">Романы Теленовеллы</h2>
+                <span class="categories-subtitle"
+                  >Книги с крутыми историями</span
+                >
               </div>
-              <!-- /.categories__icon -->
-              <h3 class="categories__title">Бизнес & Финансы</h3>
-              <span class="categories__text">Книги про мир бизнеса</span>
-            </a>
-            <a href="#" class="swiper-slide categories__slide">
-              <div class="categories__icon">
+              <!-- /.categories-card -->
+              <div class="categories-card">
                 <img
-                  src="img/slider/logo-1.svg"
+                  src="img/slider/logo-4.svg"
                   alt="Logo"
-                  class="categories__img"
+                  class="categories-image"
                 />
+                <h2 class="categories-title">Навыки будущего</h2>
+                <span class="categories-subtitle"
+                  >Книги для самоподготовки
+                </span>
               </div>
-              <!-- /.categories__icon -->
-              <h3 class="categories__title">Бизнес & Финансы</h3>
-              <span class="categories__text">Книги про мир бизнеса</span>
-            </a>
+              <!-- /.categories-card -->
+            </div>
           </div>
           <!-- /.swiper-wrapper categories__wrapper -->
           <div class="categories__button categories__button_prev">
