--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
                     <button class="like card__like">
-                      <i class="fa fa-heart" aria-hidden="true"></i>
+                      <i class="fas fa-heart"></i>
                     </button>
                   </div>
                 </div>
@@ -129,7 +129,7 @@ a Memoir"
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
                     <button class="like card__like">
-                      <i class="fa fa-heart" aria-hidden="true"></i>
+                      <i class="fas fa-heart"></i>
                     </button>
                   </div>
                 </div>
@@ -151,7 +151,7 @@ a Memoir"
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
                     <button class="like card__like">
-                      <i class="fa fa-heart" aria-hidden="true"></i>
+                      <i class="fas fa-heart"></i>
                     </button>
                   </div>
                 </div>
@@ -173,7 +173,7 @@ a Memoir"
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
                     <button class="like card__like">
-                      <i class="fa fa-heart" aria-hidden="true"></i>
+                      <i class="fas fa-heart"></i>
                     </button>
                   </div>
                 </div>
@@ -195,7 +195,7 @@ a Memoir"
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
                     <button class="like card__like">
-                      <i class="fa fa-heart" aria-hidden="true"></i>
+                      <i class="fas fa-heart"></i>
                     </button>
                   </div>
                 </div>
@@ -217,7 +217,7 @@ a Memoir"
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
                     <button class="like card__like">
-                      <i class="fa fa-heart" aria-hidden="true"></i>
+                      <i class="fas fa-heart"></i>
                     </button>
                   </div>
                 </div>
