--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <span class="card__price">$25.00</span>
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
-                    <button class="like card__like">
+                    <button data-toggle="favorites" class="like card__like">
                       <i class="fas fa-heart"></i>
                     </button>
                   </div>
@@ -128,7 +128,7 @@ a Memoir"
                   <span class="card__price">$28.00</span>
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
-                    <button class="like card__like">
+                    <button data-toggle="favorites" class="like card__like">
                       <i class="fas fa-heart"></i>
                     </button>
                   </div>
@@ -150,7 +150,7 @@ a Memoir"
                   <span class="card__price">$19.50</span>
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
-                    <button class="like card__like">
+                    <button data-toggle="favorites" class="like card__like">
                       <i class="fas fa-heart"></i>
                     </button>
                   </div>
@@ -172,7 +172,7 @@ a Memoir"
                   <span class="card__price">$20.00</span>
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
-                    <button class="like card__like">
+                    <button data-toggle="favorites" class="like card__like">
                       <i class="fas fa-heart"></i>
                     </button>
                   </div>
@@ -194,7 +194,7 @@ a Memoir"
                   <span class="card__price">$23.00</span>
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
-                    <button class="like card__like">
+                    <button data-toggle="favorites" class="like card__like">
                       <i class="fas fa-heart"></i>
                     </button>
                   </div>
@@ -216,7 +216,7 @@ a Memoir"
                   <span class="card__price">$23.00</span>
                   <div class="card__buttons">
                     <button class="card__button">Купить</button>
-                    <button class="like card__like">
+                    <button data-toggle="favorites" class="like card__like">
                       <i class="fas fa-heart"></i>
                     </button>
                   </div>
@@ -394,6 +394,7 @@ Build Products"
       crossorigin="anonymous"
     ></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
