--- a/index.html
+++ b/index.html
@@ -388,6 +388,62 @@ Build Products"
       <!-- /.container -->
     </div>
     <!-- /.categories -->
+    <section class="unreleased">
+      <div class="container">
+        <h2 class="unreleased__title">Неизданные книги</h2>
+        <div class="swiper-container unreleased__container">
+          <div class="swiper-wrapper unreleased__wrapper">
+            <div class="swiper-slide unreleased__slide">
+              <a href="#" class="unreleased__link">
+                <img
+                  src="img/unreleased/book-1.png"
+                  alt=""
+                  class="unreleased__img"
+                />
+              </a>
+              <a href="#" class="unreleased__link">
+                <img
+                  src="img/unreleased/book-2.png"
+                  alt=""
+                  class="unreleased__img"
+                />
+              </a>
+              <a href="#" class="unreleased__link">
+                <img
+                  src="img/unreleased/book-3.png"
+                  alt=""
+                  class="unreleased__img"
+                />
+              </a>
+              <a href="#" class="unreleased__link">
+                <img
+                  src="img/unreleased/book-4.png"
+                  alt=""
+                  class="unreleased__img"
+                />
+              </a>
+              <a href="#" class="unreleased__link">
+                <img
+                  src="img/unreleased/book-5.png"
+                  alt=""
+                  class="unreleased__img"
+                />
+              </a>
+            </div>
+            <div class="unreleased__button unreleased__button_prev">
+              <img src="img/prev.svg" alt="prev" />
+            </div>
+            <div class="unreleased__button unreleased__button_next">
+              <img src="img/next.svg" alt="next" />
+            </div>
+          </div>
+          <!-- /.swiper-wrapper unreleased__wrapper -->
+        </div>
+        <!-- /.swiper-container unreleased__container -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.unreleased -->
     <script src="https://use.fontawesome.com/e3087e072a.js"></script>
     <script
       src="https://kit.fontawesome.com/08a673d80a.js"
