create: added section author

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto+Condensed:wght@700&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -444,6 +445,105 @@ Build Products"
       <!-- /.container -->
     </section>
     <!-- /.unreleased -->
+
+    <section class="author">
+      <div class="author-container">
+        <div class="author__top">
+          <h2 class="author__title">История Автора</h2>
+          <p class="author__text">
+            Это раздел авторского рассказа. Каждую неделю мы стараемся
+            рассказать вам историю писателя. Расскажем всем о закулисье их книг.
+          </p>
+        </div>
+        <div class="author__videos">
+          <div class="author__box">
+            <div class="author__video author__video_1">
+              <a
+                class="video__play"
+                data-fancybox="gallery"
+                href="https://www.youtube.com/watch?v=Sr5-xMPtIfU"
+              >
+                <img src="img/author/video-1.jpg" alt="play icon"
+              /></a>
+            </div>
+            <!-- author__video -->
+          </div>
+          <!-- /.author__box -->
+          <div class="author__box">
+            <div class="author__video author__video_2">
+              <a
+                class="video__play"
+                data-fancybox="gallery"
+                href="https://www.youtube.com/watch?v=Z1OfXxH_uiw&t=117s"
+              >
+                <img src="img/author/video-2.jpg" alt="play icon"
+              /></a>
+            </div>
+            <!-- author__video -->
+            <div class="author__info">
+              <a href="#" class="author__link">
+                <h3 class="author__subtitle">Emelda Scandroot</h3>
+              </a>
+              <span class="author__desc">Author of Books Tittle</span>
+            </div>
+            <!-- /.author__info -->
+            <button class="bookmark author__bookmark">
+              <img src="img/author/bookmark.svg" alt="" />
+            </button>
+          </div>
+          <!-- /.author__box -->
+          <div class="author__box">
+            <div class="author__video author__video_3">
+              <a
+                class="video__play"
+                data-fancybox="gallery"
+                href="https://www.youtube.com/watch?v=9-cv_kL1NTs"
+              >
+                <img src="img/author/video-3.jpg" alt="play icon"
+              /></a>
+            </div>
+            <!-- author__video -->
+            <div class="author__info">
+              <a href="#" class="author__link">
+                <h3 class="author__subtitle">Emelda Scandroot</h3>
+              </a>
+              <span class="author__desc">Author of Books Tittle</span>
+            </div>
+            <!-- /.author__info -->
+            <button class="bookmark author__bookmark">
+              <img src="img/author/bookmark.svg" alt="" />
+            </button>
+          </div>
+          <!-- /.author__box -->
+          <div class="author__box">
+            <div class="author__video author__video_4">
+              <a
+                class="video__play"
+                data-fancybox="gallery"
+                href="https://www.youtube.com/watch?v=yddFxeeAhVQ"
+              >
+                <img src="img/author/video-4.jpg" alt="play icon"
+              /></a>
+            </div>
+            <!-- author__video -->
+            <div class="author__info">
+              <a href="#" class="author__link">
+                <h3 class="author__subtitle">Emelda Scandroot</h3>
+              </a>
+              <span class="author__desc">Author of Books Tittle</span>
+            </div>
+            <!-- /.author__info -->
+            <button class="bookmark author__bookmark">
+              <img src="img/author/bookmark.svg" alt="" />
+            </button>
+          </div>
+          <!-- /.author__box -->
+        </div>
+        <!-- /.author__videos -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.author -->
     <script src="https://use.fontawesome.com/e3087e072a.js"></script>
     <script
       src="https://kit.fontawesome.com/08a673d80a.js"
@@ -451,6 +551,7 @@ Build Products"
     ></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
