create: added section clients

--- a/index.html
+++ b/index.html
@@ -544,6 +544,92 @@ Build Products"
       <!-- /.container -->
     </section>
     <!-- /.author -->
+
+    <section class="clients">
+      <div class="container">
+        <h3 class="clients__title">
+          Некоторые из издателей, с которыми мы сотрудничали
+        </h3>
+        <div class="clients-wrp">
+          <a
+            href="https://slack.com/intl/en-ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/slack.svg" alt="slack" /></a
+          ><a
+            href="https://www.netflix.com/ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/netflix.svg" alt="netflix" /></a
+          ><a
+            href="https://www.fitbit.com/global/us/home"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/fitbit.svg" alt="fitbit" /></a
+          ><a
+            href="https://www.google.ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/google.svg" alt="google" /></a
+          ><a
+            href="https://www.airbnb.ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/airbnb.svg" alt="airbnb" /></a
+          ><a
+            href="https://support-uber.com/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/uber.svg" alt="uber" /></a
+          ><a
+            href="https://www.netflix.com/ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/netflix.svg" alt="netflix" /></a
+          ><a
+            href="https://www.airbnb.ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/airbnb.svg" alt="airbnb" /></a
+          ><a
+            href="https://slack.com/intl/en-ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/slack.svg" alt="slack" /></a
+          ><a
+            href="https://support-uber.com/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/uber.svg" alt="" /></a
+          ><a
+            href="https://www.fitbit.com/global/us/home"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/fitbit.svg" alt="fitbit" /></a
+          ><a
+            href="https://www.google.ru/"
+            class="clients__item"
+            target="_blank"
+          >
+            <img src="img/clients/google.svg" alt="google" />
+          </a>
+        </div>
+        <!-- /.clients-wrp -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.clients -->
     <script src="https://use.fontawesome.com/e3087e072a.js"></script>
     <script
       src="https://kit.fontawesome.com/08a673d80a.js"
