create: added section blog

--- a/index.html
+++ b/index.html
@@ -630,6 +630,87 @@ Build Products"
       <!-- /.container -->
     </section>
     <!-- /.clients -->
+
+    <section class="blog">
+      <div class="container">
+        <div class="blog__top">
+          <h2 class="blog__title">Ehya Блог</h2>
+          <button class="blog__button">Все Блоги</button>
+        </div>
+        <!-- /.blog__top -->
+        <div class="blog-wrp">
+          <div class="blog__item">
+            <div class="blog__pic">
+              <img src="img/blog/pic-1.jpg" alt="pic-1" class="blog__img" />
+            </div>
+            <a href="#" class="blog__link-subtitle">
+              <h3 class="blog__title">Success Steps For Your Business Life</h3>
+            </a>
+            <p class="blog__text">
+              This is the author story section. Every week we try to give you
+              the story of book writer. Tell all of you the behind the scene of
+              their books.
+            </p>
+          </div>
+          <!-- /.blog__item -->
+          <div class="blog__item">
+            <div class="blog__pic">
+              <img src="img/blog/pic-2.jpg" alt="pic-2" class="blog__img" />
+            </div>
+            <div class="blog__info">
+              <span class="blog__time">23 МАРТА 2020</span>
+              <a href="#" class="blog__link-subtitle">
+                <h3 class="blog__subtitle">
+                  29 Motivational Quotes <br />
+                  for Work Environments
+                </h3>
+              </a>
+              <a href="#" class="blog__link">Читать</a>
+            </div>
+            <!-- /.blog__info -->
+          </div>
+          <!-- /.blog__item -->
+          <div class="blog__item">
+            <div class="blog__pic">
+              <img src="img/blog/pic-3.jpg" alt="pic-3" class="blog__img" />
+            </div>
+            <div class="blog__info">
+              <span class="blog__time">28 МАРТА 2020</span>
+              <a href="#" class="blog__link-subtitle">
+                <h3 class="blog__subtitle">
+                  Learn To Love Growth <br />
+                  and You Will Be A Success
+                </h3>
+              </a>
+              <a href="#" class="blog__link">Читать</a>
+            </div>
+            <!-- /.blog__info -->
+          </div>
+          <!-- /.blog__item -->
+          <div class="blog__item">
+            <div class="blog__pic">
+              <img src="img/blog/pic-4.jpg" alt="pic-4" class="blog__img" />
+            </div>
+            <div class="blog__info">
+              <span class="blog__time">28 МАРТА 2020</span>
+              <a href="#" class="blog__link-subtitle">
+                <h3 class="blog__subtitle">
+                  Motivation How To Build <br />
+                  Trust at your Work
+                </h3>
+              </a>
+              <a href="#" class="blog__link">Читать</a>
+            </div>
+            <!-- /.blog__info -->
+          </div>
+          <!-- /.blog__item -->
+        </div>
+        <!-- /.blog-wrp -->
+        <button class="blog__button blog__button_mobile">Все блоги</button>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.blog -->
     <script src="https://use.fontawesome.com/e3087e072a.js"></script>
     <script
       src="https://kit.fontawesome.com/08a673d80a.js"
