create: added section subscribe

--- a/index.html
+++ b/index.html
@@ -711,6 +711,36 @@ Build Products"
       <!-- /.container -->
     </section>
     <!-- /.blog -->
+
+    <section class="subscribe">
+      <div class="subscribe-container">
+        <div class="subscribe-wrp">
+          <h2 class="subscribe__title">
+            Будь первым, кто узнает о&nbsp;наших акциях
+          </h2>
+          <form
+            action="send.php"
+            class="form subscribe__form"
+            method="POST"
+            novalidate="novalidate"
+          >
+            <input
+              type="text"
+              class="input subscribe__input invalid"
+              name="email"
+              placeholder="Ваш Email"
+              required
+              aria-invalid="true"
+            />
+            <img src="img/mail.svg" alt="Icon: mail" class="subscribe__icon" />
+            <button class="subscribe__button">Регистрация</button>
+          </form>
+        </div>
+        <!-- /.subscribe-wrp -->
+      </div>
+      <!-- /.subscribe-container -->
+    </section>
+    <!-- /.subscribe -->
     <script src="https://use.fontawesome.com/e3087e072a.js"></script>
     <script
       src="https://kit.fontawesome.com/08a673d80a.js"
